@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999976';
+our $VERSION='0.999977';
 
 
 use 5.005;
